Afegir seccions HEADER, HERO SECTION I FEATURES

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Vite App</title>
   </head>
   <body>
-
+  <!-- header -->
   <header class="bg-white">
     <nav class="mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8" aria-label="Global">
       <div class="flex lg:flex-1">
@@ -198,8 +198,7 @@
       </div>
     </div>
   </header>
-
-
+  <!-- hero section -->
   <div class="relative isolate overflow-hidden bg-gray-900">
     <svg class="absolute inset-0 -z-10 h-full w-full stroke-white/10 [mask-image:radial-gradient(100%_100%_at_top_right,white,transparent)]" aria-hidden="true">
       <defs>
@@ -243,7 +242,7 @@
       </div>
     </div>
   </div>
-
+  <!-- features section -->
   <div class="bg-white py-24 sm:py-32">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
       <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 sm:gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-3">
