--- a/preus/index.html
+++ b/preus/index.html
@@ -8,7 +8,7 @@
     <title>Vite App</title>
   </head>
   <body>
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="app.js"></script>
   <!-- header -->
   <header class="bg-white" x-data="{menuOpen: false}">
     <nav class="mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8" aria-label="Global">
