--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
   <script type="module" src="/main.js"></script>
+  <!-- particles no es pot incloure com module perquè no pot executar-se en mode non strict -->
+  <script src="particlesjs/particles.js"></script>
   <!-- header -->
   <header class="bg-white" x-data="{menuOpen: false}">
     <nav class="mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8" aria-label="Global">
@@ -200,7 +202,7 @@
     </div>
   </header>
   <!-- hero section -->
-  <div class="relative isolate overflow-hidden bg-gray-900">
+  <div id="particles-js" class="relative isolate overflow-hidden bg-gray-900">
     <svg class="absolute inset-0 -z-10 h-full w-full stroke-white/10 [mask-image:radial-gradient(100%_100%_at_top_right,white,transparent)]" aria-hidden="true">
       <defs>
         <pattern id="983e3e4c-de6d-4c3f-8d64-b9761d1534cc" width="200" height="200" x="50%" y="-1" patternUnits="userSpaceOnUse">
